yamls/nginx-gateway-fabric/http-to-https-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: infra-ns
spec:
  parentRefs:
  - name: shared-gateway
    namespace: infra-ns
  # Omitted hostnames to match all domains served by the Gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
